# ucsdrive

./: .gitignore  .gitmodules  LICENSE  README.md
docker/: README.md
drafts/ride_service_pkg/: package.xml  setup.cfg  setup.py
face_rec_pkg/: CMakeLists.txt  package.xml  setup.cfg  setup.py
face_rec_pkg/face_rec_pkg/: face_publisher.py  face_subscriber.py  ride_match_publisher.py
install/: local_setup.sh  setup.sh
install/face_rec_pkg/lib/face_rec_pkg/: face_publisher  ride_match_publisher
install/face_rec_pkg/share/face_rec_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ride_request_pkg/lib/ride_request_pkg/: ride_request
install/ride_request_pkg/share/ride_request_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ride_service_pkg/lib/ride_service_pkg/: ride_request_client  ride_request_server
log/: latest_build
ride_request_pkg/: package.xml  setup.cfg  setup.py
ride_service_pkg/: package.xml  setup.cfg  setup.py
ride_service_pkg/ride_service_pkg/: ride_request_client.py
src/: README.md
src/face_rec_pkg/: package.xml  setup.py
src/face_rec_pkg/face_rec_pkg/: face_publisher.py  ride_match_publisher.py  verification_service.py
src/face_rec_pkg/test/: test_copyright.py
src/ride_request_pkg/: setup.cfg  setup.py
src/user_input_interfaces/: CMakeLists.txt
src/user_input_interfaces/msg/: RideRequest.msg
src/user_input_interfaces/srv/: MatchFace.srv
src/verification_service_pkg/: package.xml  setup.cfg  setup.py
user_input_interfaces/: package.xml
(+47 files in other folders)
