<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>face_rec_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kneely@ucsd.edu">kneely-ubuntu-22-04</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <build_depend>setuptools</build_depend>
  <build_depend>request_ride</build_depend>

  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
